---------------------------------------------------------------------------------------------------
Version: 0.00.00
Date: 00. 00. 0000
  Features:
    - 
  Changes:
    - Added a tooltip explaining what the percentage-textfield on the recipe-lines does
  Bugfixes:
    - Add exception for the mod 'Deep Mine' so the preferences dialog doesn't crash when it is installed
    - Fixed a crash when using the beacon selection tool
    - Fixed a crash when adding a new subfactory while viewing an invalid one

---------------------------------------------------------------------------------------------------
Version: 0.18.2
Date: 20. 02. 2020
  Changes:
    - Improved responsiveness of the subfactory name-entry in multiplayer
  Bugfixes:
    - Fixed the ingredients and byproducts not showing up at the subfactory level
    - Fixed some wonkiness related to the 'Floor Total' view

---------------------------------------------------------------------------------------------------
Version: 0.18.1
Date: 21. 01. 2020
  Features:
    - Update for 0.18. It also contains some smaller features and a lot of background optimizations. There are still quite a few bugs that have been reported and not fixed, I wanted to get the 0.18 patch out quickly. Thanks to everyone that reported things, it's very much appreciated. I kind of fell off the development-train in December because of exams and the festivities, and haven't gotten back on the horse really. I'll try to address the outstanding bugs soon, and hopefully get back to feature development at some point.
  Changes:
    - Reworked the recipe picker to be easier to use. Most recipes now use the fancy new tooltips.
    - Various graphical and performance improvements
  Bugfixes:
    - Fixed an infinite loop when trying to add a recipe that has no machine it can use

---------------------------------------------------------------------------------------------------
Version: 0.17.73
Date: 03. 12. 2019
  Bugfixes: